[tool.poetry]
name = "bitfinex-api-py"
version = "3.0.6"
description = "A fork of the Bitfinex API Python client"
authors = ["Yuriy Arabsky <yuriy.arabsky@xlydian.com>"]

[tool.poetry.dependencies]
python = "^3.12"
websockets = ">=12.0,<13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
