[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitfinex-api-py"
version = "3.0.7"
description = "Official Bitfinex Python API"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Yuriy Arabsky", email = "yuriy.arabsky@xlydian.com" }]
keywords = ["bitfinex", "api", "trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pyee~=11.1.0", "websockets>=13.0", "requests>=2.32.3"]

[project.optional-dependencies]
typing = ["types-requests~=2.32.0.20241016"]
dev = [
    "mypy==1.11.0",
    "types-requests==2.31.0.10",
    "types-urllib3==1.26.25.14",
    "isort==5.13.2",
    "black==24.2.0",
    "flake8==7.0.0",
    "flake8-bugbear==24.2.6",
    "pre-commit==3.5.0",
]

[project.urls]
Homepage = "https://github.com/xLydianSoftware/bitfinex-api-py"
Repository = "https://github.com/xLydianSoftware/bitfinex-api-py"

[tool.setuptools.packages.find]
include = ["bfxapi*"]

[tool.setuptools.package-data]
bfxapi = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
